# dec

./: .gitignore  TODO.txt
dec_audio/: .gitignore  manifest.xml
dec_audio/config/: audio_processor.yaml
dec_audio/launch/: dec_audio.launch  diagnostics_monitor.launch
dec_audio/src/: audio_processor.cpp  audio_processor_node.cpp
dec_cloud_processor/: CMakeLists.txt  mainpage.dox  manifest.xml
dec_cloud_processor/config/: cloud_processor.yaml  cloud_processor1.yaml  cloud_processor2.yaml
dec_cloud_processor/launch/: camera1.launch  camera2.launch  camera_frames.launch  cloud_processor.launch  cloud_processor_1.launch  cloud_processor_2.launch  common_tf.launch  frames_camera1.launch  frames_camera2.launch  kinect_frame1.launch  kinect_frame2.launch  openni1.launch  openni2.launch  processing.launch  tf_camera1.launch  tf_camera2.launch
dec_cloud_processor/src/: cloud_processor.cpp
dec_command_line/: mainpage.dox  manifest.xml
dec_command_line/scenes/: balls
dec_command_line/scripts/: dec_command_line
dec_command_line/src/: dec_command_line.py
dec_communication/: CMakeLists.txt  mainpage.dox  manifest.xml  manifest.xml~
dec_communication/src/: dec_communication.c
dec_communication/test/: test_dec_communication.c
dec_data/: mainpage.dox  manifest.xml
dec_data/light_show_data/: LightShow1.bag  LightShow2.bag  LightShow3.bag  RandomBall.bag
dec_icsc/: CMakeLists.txt  mainpage.dox  manifest.xml  test.c
dec_icsc/include/dec_icsc/: icsc_over_usb.h
dec_icsc/src/: icsc_over_usb.cpp
dec_icsc/test/: test_arduino_icsc_dec.cpp  test_arduino_icsc_receive_led.cpp  test_arduino_icsc_send_led.cpp  test_arduino_leds_dec.cpp  test_arduino_tcp_dec.cpp  test_arduino_udp_dec.cpp  test_icsc_dec.cpp  test_icsc_receive_led.cpp  test_icsc_send_led.cpp
dec_launch/: mainpage.dox  manifest.xml
dec_launch/launch/: dec.launch  dec.launch~
dec_light_show_commander/: mainpage.dox  manifest.xml
dec_light_show_commander/src/: gain_client.cpp
dec_light_show_manager/: CMakeLists.txt  mainpage.dox  manifest.xml  notes.txt
dec_light_show_manager/config/: config.yaml  config_dem.yaml  config_light_string_distance_test.yaml  config_manuel.yaml  config_test_single_strand.yaml  light_show_manager.yaml  light_show_stacks.yaml  sensors.txt  simulation.yaml  structure.dem.2block.yaml  structure.dem.3block.yaml  structure.dem.blocks.yaml  structure.dem.yaml  structure.simple.yaml  structure.test.yaml  structure.yaml  structure_before_big_node.yaml  structure_its_on.yaml  structure_manuel.yaml  (+5 more)
dec_light_show_msgs/: mainpage.dox  manifest.xml
dec_light_shows/: CMakeLists.txt  light_show_plugins.xml  mainpage.dox  manifest.xml
dec_msgs/: mainpage.dox  manifest.xml
dec_object_models/: CMakeLists.txt  README  mainpage.dox  manifest.xml
dec_teensy/: Makefile  Makefile.save  mainpage.dox  manifest.xml  teensy.cpp
dec_udp/: CMakeLists.txt  mainpage.dox  manifest.xml
dec_utilities/: CMakeLists.txt  manifest.xml
dec_utilities/include/dec_utilities/: bag_recorder.h  constants.h  file_io.h  logging.h  math.h  param_server.h  rviz_marker_manager.h  rviz_publisher.h  services.h  singleton_factory.h  spin.h  timer.h
dec_utilities/launch/: dec_utilities.launch  dec_utilities_test.test
dec_utilities/src/: .gitignore  rviz_marker_manager.cpp  rviz_publisher.cpp
dec_utilities/test/: accumulator_test.cpp  asserts_disabled_test.cpp  asserts_enabled_test.cpp  param_server_test.cpp  test_main.cpp
dec_visualization/: CMakeLists.txt  mainpage.dox  manifest.xml
dec_world_state/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml
sketchbook/: dec_teensy
teensy/: teensy.32bit
(+301 files in other folders)
